# blocklist-updater

./: .gitignore  README.md  pyproject.toml
src/blocklist_updater/: __init__.py  __main__.py  updater.py
